--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-* {
+*,
+*::before,
+*::after {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -7,7 +9,7 @@
   user-select: none;
 }
 body {
-  background-color: #000;
+  background-color: #111;
 }
 .calc {
   width: 400px;
@@ -17,7 +19,7 @@ body {
   color: #fff;
   text-align: right;
   font-size: 60px;
-  padding: 30px 50px;
+  padding: 15px 50px;
 }
 .keypad-table tr:first-child .key {
   background-color: #a5a5a5;
